[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = "Ronaldo Satomi <rksatomi@gmail.com>"
authors = ["rksatomi <rksatomi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
motor = "^3.4.0"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pre = "^1.3.0"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
